--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,11 @@
   "start_url": "./map.html",
   "scope": "./",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#ffffff",
   "theme_color": "#2196f3",
   "icons": [
-    { "src": "./icon.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "./icon.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "icon.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
